--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "6.3.13",
     "eslint": "4.15.0",
     "eslint-loader": "1.1.0",
+    "raw-loader": "^0.5.1",
     "webpack": "2.4.1"
   },
   "repository": {
