--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "4.15.0",
     "eslint-loader": "1.1.0",
     "raw-loader": "^0.5.1",
+    "url-loader": "^0.6.2",
     "webpack": "2.4.1"
   },
   "repository": {
