--- a/package.json
+++ b/package.json
@@ -7,16 +7,14 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "babel": "6.3.13",
-    "babel-core": "6.1.18",
-    "babel-eslint": "5.0.0",
-    "babel-loader": "6.1.0",
-    "babel-preset-es2015": "6.3.13",
-    "eslint": "4.15.0",
-    "eslint-loader": "1.1.0",
+    "awesome-typescript-loader": "^5.0.0-1",
+    "eslint": "^4.18.2",
     "raw-loader": "^0.5.1",
+    "typescript": "^2.7.2",
+    "typescript-eslint-parser": "^14.0.0",
     "url-loader": "^0.6.2",
-    "webpack": "2.4.1"
+    "webpack": "4.1.0",
+    "webpack-cli": "^2.0.10"
   },
   "repository": {
     "type": "git",
