--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A javascript library for rendering webgl.",
   "main": "dist/redcube",
   "scripts": {
-    "dev": "webpack --mode development --watch",
+    "dev": "webpack-serve",
     "prod": "webpack --mode production",
     "lint": "eslint --fix --ext .ts ./src/"
   },
@@ -15,8 +15,9 @@
     "typescript": "^2.8.3",
     "typescript-eslint-parser": "^15.0.0",
     "url-loader": "^0.6.2",
-    "webpack": "4.1.0",
-    "webpack-cli": "^2.0.10"
+    "webpack": "4.16.5",
+    "webpack-cli": "3.1.0",
+    "webpack-serve": "^2.0.2"
   },
   "repository": {
     "type": "git",
