--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "outDir": "./dist",
         "allowJs": true,
         "module": "es2015",
-        "target": "esnext"
+        "target": "esnext",
+        "moduleResolution": "node"
     },
     "include": [
         "./src/**/*"
