--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "homepage": "https://github.com/Reon90/redcube",
   "dependencies": {
+    "draco3d": "^1.3.4",
     "parse-hdr": "^1.0.0"
   }
 }
