--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "outDir": "./dist",
         "allowJs": true,
-        "module": "es2015",
+        "module": "commonjs",//"es2015",
         "target": "esnext",
         "moduleResolution": "node"
     },
