--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redcube.js",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "A javascript library for rendering webgl.",
   "main": "dist/redcube",
   "scripts": {
@@ -39,8 +39,9 @@
   },
   "homepage": "https://github.com/Reon90/redcube",
   "dependencies": {
-    "draco3d": "^1.3.4",
+    "draco3d": "^1.3.6",
     "parse-hdr": "^1.0.0",
-    "source-map-support": "^0.5.12"
+    "source-map-support": "^0.5.12",
+    "webpack-node-externals": "^1.7.2"
   }
 }
