--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "description": "A javascript library for rendering webgl.",
   "main": "dist/redcube",
   "scripts": {
-    "client": "webpack-dev-server",
+    "client": "webpack serve",
     "server": "webpack --config webpack.server.js",
     "prod": "webpack --mode production",
     "lint": "eslint --fix --ext .ts ./src/ || true && prettier --write \"src/**/*.ts\""
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.0.0-1",
+    "awesome-typescript-loader": "5.2.1",
     "eslint": "^5.10.0",
     "prettier": "^1.15.3",
-    "raw-loader": "^1.0.0",
-    "typescript": "^3.2.2",
+    "raw-loader": "4.0.2",
+    "typescript": "3.9.4",
     "typescript-eslint-parser": "^21.0.2",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "url-loader": "4.1.1",
+    "webpack": "5.11.0",
+    "webpack-cli": "4.2.0",
+    "webpack-dev-server": "3.11.0"
   },
   "repository": {
     "type": "git",
