--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redcube.js",
-  "version": "2.5.18",
+  "version": "3.0.0",
   "description": "A javascript library for rendering webgl.",
   "main": "dist/redcube",
   "scripts": {
@@ -39,6 +39,7 @@
   },
   "homepage": "https://github.com/Reon90/redcube",
   "dependencies": {
+    "@webgpu/types": "^0.1.2",
     "copy-webpack-plugin": "^7.0.0",
     "draco3d": "^1.3.6",
     "parse-hdr": "^1.0.0",
