--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redcube.js",
   "version": "3.0.0",
-  "description": "A javascript library for rendering webgl.",
+  "description": "JS renderer based on GLTF to WebGPU or WebGL backends.",
   "main": "dist/redcube",
   "scripts": {
     "client": "webpack serve",
@@ -10,12 +10,13 @@
     "lint": "eslint --fix --ext .ts ./src/ || true && prettier --write \"src/**/*.ts\""
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "4.15.1",
+    "@typescript-eslint/parser": "4.15.1",
     "awesome-typescript-loader": "5.2.1",
-    "eslint": "^5.10.0",
+    "eslint": "7.25.0",
     "prettier": "^1.15.3",
     "raw-loader": "4.0.2",
     "typescript": "3.9.4",
-    "typescript-eslint-parser": "^21.0.2",
     "url-loader": "4.1.1",
     "webpack": "5.11.0",
     "webpack-cli": "4.5.0",
@@ -27,6 +28,7 @@
   },
   "keywords": [
     "webgl",
+    "webgpu",
     "opengl",
     "gltf",
     "Khronos group",
