--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redcube.js",
-  "version": "3.3.0",
+  "version": "4.0.0",
   "description": "JS renderer based on GLTF to WebGPU or WebGL backends.",
   "main": "dist/redcube",
   "scripts": {
@@ -10,17 +10,22 @@
     "lint": "eslint --fix --ext .ts ./src/ || true && prettier --write \"src/**/*.ts\""
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "4.15.1",
-    "@typescript-eslint/parser": "4.15.1",
-    "awesome-typescript-loader": "5.2.1",
-    "eslint": "7.25.0",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "@webgpu/types": "^0.1.13",
+    "copy-webpack-plugin": "^7.0.0",
+    "eslint": "8.13.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^1.15.3",
     "raw-loader": "4.0.2",
-    "typescript": "3.9.4",
+    "source-map-support": "^0.5.12",
+    "ts-loader": "^9.2.8",
+    "typescript": "^3.9.4",
     "url-loader": "4.1.1",
-    "webpack": "5.11.0",
-    "webpack-cli": "4.5.0",
-    "webpack-dev-server": "3.11.0"
+    "webpack": "5.72.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "^4.8.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "repository": {
     "type": "git",
@@ -41,11 +46,7 @@
   },
   "homepage": "https://github.com/Reon90/redcube",
   "dependencies": {
-    "@webgpu/types": "^0.1.13",
-    "copy-webpack-plugin": "^7.0.0",
     "draco3d": "^1.3.6",
-    "parse-hdr": "^1.0.0",
-    "source-map-support": "^0.5.12",
-    "webpack-node-externals": "^1.7.2"
+    "parse-hdr": "^1.0.0"
   }
 }
