--- a/package.json
+++ b/package.json
@@ -4,28 +4,26 @@
   "description": "JS renderer based on GLTF to WebGPU or WebGL backends.",
   "main": "dist/redcube",
   "scripts": {
-    "client": "webpack serve",
+    "client": "webpack serve --port 8000",
     "server": "webpack --config webpack.server.js",
     "prod": "rm -rf ./dist && webpack --mode production",
     "lint": "eslint --fix --ext .ts ./src/ || true && prettier --write \"src/**/*.ts\""
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.19.0",
-    "@typescript-eslint/parser": "5.19.0",
-    "@webgpu/types": "^0.1.13",
-    "copy-webpack-plugin": "^7.0.0",
-    "eslint": "8.13.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^1.15.3",
-    "raw-loader": "4.0.2",
+    "@typescript-eslint/eslint-plugin": "7.12.0",
+    "@typescript-eslint/parser": "7.12.0",
+    "@webgpu/types": "0.1.42",
+    "copy-webpack-plugin": "12.0.2",
+    "eslint": "8.56.0",
+    "eslint-plugin-unused-imports": "3.2.0",
+    "prettier": "3.3.1",
     "source-map-support": "^0.5.12",
-    "ts-loader": "^9.2.8",
-    "typescript": "^3.9.4",
-    "url-loader": "4.1.1",
-    "webpack": "5.72.0",
-    "webpack-cli": "4.9.2",
-    "webpack-dev-server": "^4.8.1",
-    "webpack-node-externals": "^1.7.2"
+    "ts-loader": "9.5.1",
+    "typescript": "5.4.5",
+    "webpack": "5.91.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.0.4",
+    "webpack-node-externals": "3.0.0"
   },
   "repository": {
     "type": "git",
