--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "lint": "eslint --fix --ext .ts ./src/ || true && prettier --write \"src/**/*.ts\""
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "7.12.0",
-    "@typescript-eslint/parser": "7.12.0",
-    "@webgpu/types": "0.1.42",
-    "copy-webpack-plugin": "12.0.2",
-    "eslint": "8.56.0",
-    "eslint-plugin-unused-imports": "3.2.0",
-    "prettier": "3.3.1",
-    "source-map-support": "^0.5.12",
-    "ts-loader": "9.5.1",
-    "typescript": "5.4.5",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.1.4",
-    "webpack-dev-server": "5.0.4",
-    "webpack-node-externals": "3.0.0"
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
+    "@webgpu/types": "^0.1.48",
+    "copy-webpack-plugin": "^12.0.2",
+    "eslint": "^9.12.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "prettier": "^3.3.3",
+    "source-map-support": "^0.5.21",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "repository": {
     "type": "git",
@@ -44,7 +44,7 @@
   },
   "homepage": "https://github.com/Reon90/redcube",
   "dependencies": {
-    "draco3d": "^1.3.6",
+    "draco3d": "^1.5.7",
     "parse-hdr": "^1.0.0"
   }
 }
