--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.0.0",
   "description": "JS renderer based on GLTF to WebGPU or WebGL backends.",
   "main": "dist/redcube",
+  "type": "module",
   "scripts": {
     "client": "webpack serve --port 8000",
     "server": "webpack --config webpack.server.js",
@@ -10,19 +11,22 @@
     "lint": "eslint --fix --ext .ts ./src/ || true && prettier --write \"src/**/*.ts\""
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "@typescript-eslint/parser": "^8.8.1",
-    "@webgpu/types": "^0.1.48",
+    "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "@webgpu/types": "^0.1.54",
     "copy-webpack-plugin": "^12.0.2",
-    "eslint": "^9.12.0",
+    "eslint": "^9.19.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "prettier": "^3.3.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.6.3",
-    "webpack": "^5.95.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
+    "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
+    "webpack-dev-server": "^5.2.0",
     "webpack-node-externals": "^3.0.0"
   },
   "repository": {
@@ -45,6 +49,7 @@
   "homepage": "https://github.com/Reon90/redcube",
   "dependencies": {
     "draco3d": "^1.5.7",
-    "parse-hdr": "^1.0.0"
+    "parse-hdr": "^1.0.0",
+    "ts-node": "^10.9.2"
   }
 }
