--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
     "lint": "eslint --fix --ext .ts ./src/ || true && prettier --write \"src/**/*.ts\""
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@typescript-eslint/eslint-plugin": "^8.31.1",
-    "@typescript-eslint/parser": "^8.31.1",
-    "@webgpu/types": "^0.1.60",
-    "copy-webpack-plugin": "^12.0.2",
-    "eslint": "^9.25.1",
+    "@types/jest": "^30.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "@webgpu/types": "^0.1.64",
+    "copy-webpack-plugin": "^13.0.0",
+    "eslint": "^9.31.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "jest": "^29.7.0",
-    "prettier": "^3.5.3",
+    "jest": "^30.0.4",
+    "prettier": "^3.6.2",
     "source-map-support": "^0.5.21",
-    "ts-jest": "^29.3.2",
+    "ts-jest": "^29.4.0",
     "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "webpack": "^5.99.7",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.1",
+    "webpack": "^5.100.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2",
     "webpack-node-externals": "^3.0.0"
   },
   "repository": {
@@ -49,7 +50,6 @@
   "homepage": "https://github.com/Reon90/redcube",
   "dependencies": {
     "draco3d": "^1.5.7",
-    "parse-hdr": "^1.0.0",
-    "ts-node": "^10.9.2"
+    "parse-hdr": "^1.0.0"
   }
 }
